add better answering protocol and fix filters bug

--- a/.gitignore
+++ b/.gitignore
@@ -31818,3 +31818,4 @@
 .venv/share/jupyter/nbextensions/pydeck/extensionRequires.js
 .venv/share/jupyter/nbextensions/pydeck/index.js
 .venv/share/jupyter/nbextensions/pydeck/index.js.map
+.vscode/launch.json
