--- a/.gitignore
+++ b/.gitignore
@@ -31819,3 +31819,4 @@
 .venv/share/jupyter/nbextensions/pydeck/index.js
 .venv/share/jupyter/nbextensions/pydeck/index.js.map
 .vscode/launch.json
+.streamlit/secrets.toml
